# Cerberus2.0

./: .gitignore  CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer-wsl.json  devcontainer.json
config/elev_map/: convex_plane_decompose.yaml  elevation_mapping.yaml
config/go1_config/: hardware_go1_vilo_config.yaml  hardware_go1_vilo_config_base.yaml  hardware_go1_vilo_config_flying_trot.yaml  hardware_go1_vilo_config_indoor.yaml  hardware_go1_vilo_config_outdoor.yaml
config/rviz/: cerberus_debug.rviz  cerberus_elevmap.rviz  pj.xml
include/factor/: imu_factor.hpp  integration_base.hpp  lo_constant_factor.hpp  lo_factor.hpp  lo_intergration_base.hpp  lo_tight_factor.hpp  lo_tight_integration_base.hpp  marginalization_factor.h  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
include/featureTracker/: feature_manager.h  feature_tracker.h
include/fusion/: ROSFusion.hpp  VILOFusion.hpp
include/mipo/: MIPOEstimator.hpp  MIPOEstimatorTensor.hpp
include/sipo/: SIPOEstimator.hpp
include/utils/: CameraPoseVisualization.h  LOTightUtils.hpp  Measurement.hpp  MeasurementQueue.hpp  MovingWindowFilter.hpp  POParams.hpp  ROSFusion.hpp  casadi_kino.hpp  parameters.hpp  tic_toc.h  torch_kino.hpp  utils.hpp  vins_utility.h  visualization.h
include/vilo/: VILOEstimator.hpp  initial_alignment.h
launch/: mipo_launch.launch  vilo-tm-tune.sh  vilo_auto.launch  vilo_autotest.sh  vilo_dataset_multi_runs.launch  vilo_hardware.launch  vilo_indoor_dataset_multi_runs.sh  vilo_launch.launch  vilo_launch_flying_trot.launch  vilo_multi_dataset_compare.sh  vilo_outdoor_dataset_multi_runs.sh  vins_launch.launch
launch/elev_map/: elevation_mapping.launch  vilo_elev_map.launch
misc/: casadi_misc.hpp
script/matlab/: README.md  drift_compare.m  indoor_cerberus12_multiple_dataset_compare.m  indoor_cerberus12_single_dataset_compare.m  indoor_vilo_po_compare.m  indoor_vilo_po_multi_dataset_compare.m  outdoor_cerberus12_single_dataset_compare.m  parse_cerberus2_data.m  parse_cerberus_data.m  parse_data.m  vilo_po_compare.m  vilo_po_compare_no_gt.m  vilo_po_multi_dataset_compare.m
script/matlab/mobile_gps_process/: orientation_filtering.m  position_filter.m  process_mobile_data.m  test.m
script/matlab/results/: cerberus12_compare_indoor_sqh.fig  velocity_compare_indoor_sqh.fig
script/matlab/tro_figures/: TEST_box_plot.m  TEST_gait_drift_compare.m  TEST_vis_dataset.m  TEST_vis_dataset_outdoor.m  frick_park_arch.fig  gps_position_filter.m  mill19_park.fig  mill19_trail.fig  outdoor_sipo_mipo_compare2.tex  ros_pos_to_geo_pos.m  schenley_loop_tennis.fig  schenley_sec1.fig  schenley_sec2.fig  tro_fig_indoor_robustness_gait.m  tro_fig_indoor_robustness_speed.m  tro_fig_indoor_robustness_vision_block.m  tro_fig_indoor_vis.m  tro_fig_live_plot_traj.m  tro_fig_outdoor_frick_park_arch.m  tro_fig_outdoor_mill19_park.m  tro_fig_outdoor_mill19_trail.m  tro_fig_outdoor_mill19_trail_kml_test.m  tro_fig_outdoor_schenley_loop_tennis.m  tro_fig_outdoor_schenley_sec1.m  tro_fig_outdoor_schenley_sec2.m  tro_fig_outdoor_wightman_park_bridge.m  tro_indoor_compare1.tex  tro_indoor_compare2.tex  tro_indoor_robustness_frequency.tex  tro_indoor_robustness_gait.tex  tro_indoor_robustness_speed.tex  tro_indoor_robustness_vision.tex  write_geo_pos_to_kml.m
script/matlab/tro_figures/frequency_robustness/: indoor_freq_compare_drifts_036.m  indoor_freq_compare_drifts_040.m  indoor_freq_compare_drifts_048.m  indoor_freq_compare_drifts_052.m  tro_fig_indoor_robustness_frequency.m
script/matlab/tro_figures/gait_patterns/: gait_pattern_draw.m  tro_gait_pattern.tex
script/matlab/tro_figures/gait_robustness/: TEST_indoor_robustness_gait.m  indoor_gait_compare_drifts_flytrot.m  indoor_gait_compare_drifts_standtrot.m  indoor_gait_compare_drifts_trot.m  tro_fig_indoor_robustness_gait.m
script/matlab/tro_figures/robustness/: indoor_gait_compare_drifts_flytrot.m  indoor_gait_compare_drifts_standtrot.m  indoor_gait_compare_drifts_trot.m  tro_fig_indoor_robustness_frequency.m  tro_fig_indoor_robustness_gait.m  tro_fig_indoor_robustness_speed.m
script/matlab/tro_figures/speed_robustness/: indoor_speed_compare_drifts_02.m  indoor_speed_compare_drifts_04.m  indoor_speed_compare_drifts_06.m  indoor_speed_compare_drifts_08.m  indoor_speed_compare_drifts_10.m  tro_fig_indoor_robustness_speed.m
src/factor/: marginalization_factor.cpp  pose_local_parameterization.cpp  projectionOneFrameTwoCamFactor.cpp  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameTwoCamFactor.cpp  projection_factor.cpp
src/featureTracker/: feature_manager.cpp  feature_tracker.cpp
src/fusion/: ROSFusion.cpp  VILOFusion.cpp
src/mipo/: MIPOEstimator.cpp  MIPOEstimatorTensor.cpp
src/program/: cerberus2_main.cpp  mipo_main.cpp
src/sipo/: SIPOEstimator.cpp
src/utils/: CameraPoseVisualization.cpp  ROSFusion.cpp  parameters.cpp  torch_kino.cpp  vins_utility.cpp  visualization.cpp
src/vilo/: VILOEstimator.cpp  initial_aligment.cpp
test/: test_LOTightFactor.cpp  test_LOTightIntegration.cpp
urdf/a1_description/urdf/: a1.urdf  a1_payload.urdf  a1_scale100.urdf
urdf/a1_description/xacro/: leg.xacro  robot.xacro
